[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/LibreBaskerville-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/level_set_selection_scene.gd" type="Script" id=2]
[ext_resource path="res://img/menu_bar.png" type="Texture" id=3]
[ext_resource path="res://font/wqy-MicroHei.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="LevelSetSelection" type="Node2D"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.47144
margin_top = -1.45459
margin_right = 1024.52
margin_bottom = 599.546
custom_constants/margin_right = 80
custom_constants/margin_top = 50
custom_constants/margin_left = 80
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 50.0
margin_right = 944.0
margin_bottom = 551.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 864.0
margin_bottom = 60.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 256.0
margin_right = 607.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 5 )
text = "PUZZLE_SET_SELECTION"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 864.0
margin_bottom = 501.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 460.0
margin_bottom = 437.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="SetButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 448.0
margin_bottom = 443.0
size_flags_horizontal = 3
custom_constants/separation = 21

[node name="Button10" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
visible = false
margin_right = 448.0
margin_bottom = 37.0
theme = ExtResource( 5 )
text = "WitCup 7"

[node name="Button11" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
visible = false
margin_top = 58.0
margin_right = 448.0
margin_bottom = 95.0
theme = ExtResource( 5 )
text = "WitCup 10"

[node name="Button12" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
visible = false
margin_top = 116.0
margin_right = 448.0
margin_bottom = 153.0
theme = ExtResource( 5 )
text = "Other WitCups"

[node name="Button13" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
visible = false
margin_top = 174.0
margin_right = 448.0
margin_bottom = 211.0
theme = ExtResource( 5 )
text = "Looksy Sets"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_right = 448.0
margin_bottom = 37.0
theme = ExtResource( 5 )
text = "Challenge: Normal"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_top = 58.0
margin_right = 448.0
margin_bottom = 95.0
theme = ExtResource( 5 )
text = "Challenge: Eliminators"

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_top = 116.0
margin_right = 448.0
margin_bottom = 153.0
theme = ExtResource( 5 )
text = "Challenge: Rings"

[node name="Button6" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_top = 174.0
margin_right = 448.0
margin_bottom = 211.0
theme = ExtResource( 5 )
text = "Challenge: Arrows"

[node name="Button7" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_top = 232.0
margin_right = 448.0
margin_bottom = 269.0
theme = ExtResource( 5 )
text = "Challenge: Bee Hive"

[node name="Button9" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_top = 290.0
margin_right = 448.0
margin_bottom = 327.0
theme = ExtResource( 5 )
text = "Challenge: Speed"

[node name="Button8" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_top = 348.0
margin_right = 448.0
margin_bottom = 385.0
theme = ExtResource( 5 )
text = "Challenge: Finite Water"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/SetButtons"]
margin_top = 406.0
margin_right = 448.0
margin_bottom = 443.0
theme = ExtResource( 5 )
text = "Challenge: Misc"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 864.0
margin_bottom = 437.0

[node name="DescriptionBox" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 400.0
margin_bottom = 355.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "This is a line of text. This is a line of text. This is a line of text. This is a line of text. This is a line of text. 

The puzzle set uses the following mechanics:
1. Circle arrows from wc7
2. Strawberry from Celeste
3. Herobrine from Minecraft
4. Foliage from an oak tree"
readonly = true
wrap_enabled = true

[node name="CustomMusicButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 359.0
margin_right = 400.0
margin_bottom = 396.0
theme = ExtResource( 5 )
text = "CUSTOM_MUSIC"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 400.0
margin_right = 400.0
margin_bottom = 437.0

[node name="SeedButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 82.0
margin_bottom = 37.0
theme = ExtResource( 5 )
text = "SEED"

[node name="SeedText" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 86.0
margin_right = 400.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="MenuBarButton" type="TextureButton" parent="."]
margin_left = 22.0
margin_top = 22.0
margin_right = 62.0
margin_bottom = 62.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CustomMusicButton" to="." method="_on_CustomMusicButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/SeedButton" to="." method="_on_SeedButton_pressed"]
[connection signal="mouse_entered" from="MenuBarButton" to="." method="_on_MenuBarButton_mouse_entered"]
[connection signal="mouse_exited" from="MenuBarButton" to="." method="_on_MenuBarButton_mouse_exited"]
[connection signal="pressed" from="MenuBarButton" to="." method="_on_MenuBarButton_pressed"]
